--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.9", features = ["derive"] }
+clap-stdin = "0.5.1"
 textwrap = "0.16.1"
+unicode-segmentation = "1.11.0"
