--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+atty = "0.2.14"
 clap = { version = "4.5.9", features = ["derive"] }
-clap-stdin = "0.5.1"
+rand = "0.8.5"
+rand_distr = "0.4.3"
 textwrap = "0.16.1"
 unicode-segmentation = "1.11.0"
